--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
 
 <main>
 <!-- Шапка -->
-<div>
     <section>
         <h1>Ефективні рішення<br> для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
     </section>
-</div>
 
 <!-- Особливості -->
 <section>
@@ -61,7 +59,7 @@
 </section>
 
 <!-- Зайнятість компанії -->
-<article>
+<section>
     <h3>Чим ми займаємося</h3>
     <ul>
         <li>
@@ -74,7 +72,7 @@
             <img src="images/img3.svg" alt="Перелік кольорів" width="370">
         </li>
     </ul>
-</article>
+</section>
 
 <!-- Наша команда -->
 <section>
